--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ REACT_APP_CLOUD_IMAGES_TEMPLATE=https://mg-show-assets.s3.us-east-1.amazonaws.co
 REACT_APP_CLOUD_IMAGES_USER=https://mg-show-assets.s3.us-east-1.amazonaws.com/images/user-images/
 
 
-REACT_APP_REST_SERVICE=http://localhost:9899/api/v1/show/
+REACT_APP_PUSH_SERVICE=https://gtk-rest-service.onrender.com:10000
 
-REACT_APP_PUSH_SERVICE=http://localhost:9899
+REACT_APP_REST_SERVICE=https://gtk-rest-service.onrender.com/api/v1/shows/
