--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "new-overlays",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "/",
   "dependencies": {
     "@storybook/addon-docs": "^6.5.15",
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,8 +15,10 @@
     "axios": "^1.2.1",
     "moment": "^2.29.4",
     "node-sass": "^8.0.0",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.6",
