--- a/src/overlays/templates/PTI/config.json
+++ b/src/overlays/templates/PTI/config.json
@@ -4,6 +4,7 @@
     "headerTab": 15,
     "networkTab": 3,
     "newsFeed": 20,
-    "socialNetworks": 30
+    "socialNetworks": 30,
+    "sponsors": 75
   }
 }
