Add chat ranks (SAS)

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ REACT_APP_CLOUD_IMAGES_USER=https://mg-show-assets.s3.us-east-1.amazonaws.com/im
 
 REACT_APP_PUSH_SERVICE=https://gtk-rest-service.onrender.com
 
-REACT_APP_REST_SERVICE=https://gtk-rest-service.onrender.com/api/v1/shows/
+REACT_APP_REST_SERVICE=https://gtk-rest-service.onrender.com/api/v1/
