Update labels and params

--- a/src/overlays/templates/BNN/config.json
+++ b/src/overlays/templates/BNN/config.json
@@ -2,6 +2,7 @@
   "scrollTimers": {
     "headerTab": 15,
     "networkTab": 3,
-    "newsFeed": 20
+    "newsFeed": 20,
+    "hostLabels": 5
   }
 }
