--- a/src/overlays/templates/CHL/config.json
+++ b/src/overlays/templates/CHL/config.json
@@ -1,8 +1,10 @@
 {
   "scrollTimers": {
-    "headerTab": 15,
-    "networkTab": 3,
-    "newsFeed": 20,
-    "hostLabels": 5
-  }
+    "headerTab": 45,
+    "networkTab": 60,
+    "newsFeed": 35,
+    "hostLabels": 30
+  },
+  "fireHostCount": 5,
+  "freezeHostCount": 5
 }
