--- a/src/overlays/templates/XBX/config.json
+++ b/src/overlays/templates/XBX/config.json
@@ -1,10 +1,11 @@
 {
   "scrollTimers": {
     "headerTab": 45,
-    "networkTab": 60,
-    "newsFeed": 5,
-    "hostLabels": 5,
-    "sponsors": 5
+    "networkTab": 65,
+    "newsFeed": 30,
+    "hostLabels": 25,
+    "sponsors": 50,
+    "timing": 29
   },
   "fireHostCount": 15,
   "freezeHostCount": 5
