--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
