Add XBX clock permissions

--- a/src/overlays/templates/XBX/db.config.json
+++ b/src/overlays/templates/XBX/db.config.json
@@ -46,6 +46,10 @@
       "param": "chyron"
     },
     {
+      "name": "Clock",
+      "param": "clock"
+    },
+    {
       "name": "Description",
       "param": "description"
     },
