--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "homepage": "/",
   "dependencies": {
-    "@storybook/addon-docs": "^6.5.15",
+    "@storybook/addon-docs": "^8.1.3",
+    "@storybook/addon-queryparams": "^7.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +23,7 @@
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.4.1",
+    "storybook-addon-module-mock": "^1.3.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
@@ -32,13 +34,15 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ],
     "overrides": [
       {
@@ -64,19 +68,27 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-interactions": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/builder-webpack5": "^6.5.15",
-    "@storybook/manager-webpack5": "^6.5.15",
-    "@storybook/node-logger": "^6.5.15",
-    "@storybook/preset-create-react-app": "^4.1.2",
-    "@storybook/react": "^6.5.15",
-    "@storybook/testing-library": "^0.0.13",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@chromatic-com/storybook": "^1.4.0",
+    "@storybook/addon-actions": "^8.1.3",
+    "@storybook/addon-essentials": "^8.1.3",
+    "@storybook/addon-interactions": "^8.1.3",
+    "@storybook/addon-jest": "^8.1.3",
+    "@storybook/addon-links": "^8.1.3",
+    "@storybook/addon-onboarding": "^8.1.3",
+    "@storybook/blocks": "^8.1.3",
+    "@storybook/node-logger": "^8.1.3",
+    "@storybook/preset-create-react-app": "^8.1.3",
+    "@storybook/react": "^8.1.3",
+    "@storybook/react-webpack5": "^8.1.3",
+    "@storybook/test": "^8.1.3",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "eslint-plugin-storybook": "^0.8.0",
+    "jest": "^29.7.0",
+    "jest-mock": "^29.7.0",
     "prop-types": "^15.8.1",
+    "storybook": "^8.1.3",
     "webpack": "^5.75.0"
   }
 }
