Fix CNN Sponsor

--- a/src/overlays/templates/CNN/db.config.json
+++ b/src/overlays/templates/CNN/db.config.json
@@ -2,8 +2,8 @@
   "_id": {
     "$oid": "65a90a1a02aae02cdba1910d"
   },
-  "name": "CNN: App",
-  "urlKey": "CNN",
+  "name": "CNN: CNN App",
+  "urlKey": "cnn",
   "maxHosts": 1,
   "thumbnail": "https://mg-show-assets.s3.us-east-1.amazonaws.com/images/template-images/fgt.jpg",
   "tickerConfig": {
@@ -24,7 +24,7 @@
     "sponsors": {
       "maxAmount": 99,
       "height": 110,
-      "width": 210
+      "width": 610
     },
     "topic": {
       "maxAmount": 1,
